objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Cloufi__Business_DBA_Years_At_Location__c</fullName>
        <label>Years At Location</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cloufi__Business_DBA_Years_In_Business__c</fullName>
        <label>Years In Business</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloufi__Business_Sales__c</fullName>
        <label>Business Sales %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cloufi__Commission__c</fullName>
        <label>Commission %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cloufi__CompanyId__c</fullName>
        <externalId>true</externalId>
        <label>CompanyId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloufi__Consumer_Sales__c</fullName>
        <label>Consumer Sales %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cloufi__Contact_Person__c</fullName>
        <label>Contact Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloufi__Credit_Score__c</fullName>
        <label>Credit Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloufi__Daily_Payback_Amt__c</fullName>
        <label>Daily Payback Amt</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cloufi__Date_Account_Opened_Bank_Info__c</fullName>
        <label>Date Account Opened</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cloufi__Dilution_finance_info__c</fullName>
        <label>Dilution</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cloufi__Dropbox_Folder_Path__c</fullName>
        <label>Dropbox Folder Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloufi__Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Cloufi__Equipment_Value_finance_value__c</fullName>
        <label>Equipment Value</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cloufi__Equity_finance_info__c</fullName>
        <label>Equity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cloufi__Export_Sales__c</fullName>
        <label>Export Sales %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cloufi__Factor_Rate__c</fullName>
        <label>Factor Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloufi__Fax_Bank_Info__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Cloufi__Fico_Score__c</fullName>
        <label>Fico Score</label>
        <picklist>
            <picklistValues>
                <fullName>750+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>750-680</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>680-600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>600-500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Below 500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Sure</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cloufi__Financial_Period_Of_Months_finance_info__c</fullName>
        <label>Financial Period # Of Months</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloufi__Fiscal_Year_End__c</fullName>
        <label>Fiscal Year End</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cloufi__Frequency__c</fullName>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cloufi__Funder_Date__c</fullName>
        <label>Funder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cloufi__Funder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Funder</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Loans (Funder)</relationshipLabel>
        <relationshipName>Loans3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cloufi__Funding_Type__c</fullName>
        <label>Funding Type</label>
        <picklist>
            <picklistValues>
                <fullName>ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC Split</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cloufi__Gross_Margin__c</fullName>
        <formula>IF( 

OR ( Cloufi__Gross_Profit__c =0, Cloufi__Monthly_Revenue__c= 0), 

0, 

(Cloufi__Gross_Profit__c / Cloufi__Monthly_Revenue__c) 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cloufi__Gross_Profit__c</fullName>
        <label>Gross Profit</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cloufi__Gross_RTR__c</fullName>
        <formula>Cloufi__Payback_Amount__c * (1- Cloufi__Backend_Fees__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross RTR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cloufi__Industry__c</fullName>
        <label>Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Accommodation and Food Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative and Support and Waste Management and Re-mediation Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agriculture, Forestry, Fishing and Hunting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arts, Entertainment, and Recreation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Educational Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance and Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Care and Social Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management of Companies and Enterprises</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining, Quarrying, and Oil and Gas Extraction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Services (except Public Administration)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional, Scientific, and Technical Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate and Rental and Leasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation and Warehousing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesale Trade / Distribution</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cloufi__Interest_Charges_finance_info__c</fullName>
        <label>Interest Charges</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cloufi__Introducer_Account__c</fullName>
        <label>Introducer Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloufi__Inventory_Cost_Value_finance_info__c</fullName>
        <label>Inventory Cost Value</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cloufi__IsActive__c</fullName>
        <label>IsActive</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cloufi__IsInvited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsInvited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cloufi__Judgement__c</fullName>
        <label>Judgement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloufi__Last_Activity_Date__c</fullName>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cloufi__Legal_Corporate_Name__c</fullName>
        <label>Legal/Corporate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloufi__Loan_Term__c</fullName>
        <label>Loan Term</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloufi__Loan_Type__c</fullName>
        <label>Loan Type</label>
        <picklist>
            <picklistValues>
                <fullName>Asset Based Lending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Advance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Factoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Floor Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hard Money</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merchant Cash Advance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase Order Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBA Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Chain Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Finance</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Cloufi__Main_Customers__c</fullName>
        <label>Main Customers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloufi__Manual_Fill__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Fill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cloufi__Max_Gross__c</fullName>
        <label>Max % Gross</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cloufi__Max_Monthly_PMT__c</fullName>
        <label>Max Monthly PMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cloufi__Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Cloufi__Monthly_CC_Vol__c</fullName>
        <label>Monthly CC Vol $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cloufi__Monthly_Gross_Sale__c</fullName>
        <label>Monthly Gross Sale</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cloufi__Monthly_Revenue__c</fullName>
        <label>Monthly Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cloufi__Net_Other_Income_Expense_finance_info__c</fullName>
        <label>Net Other Income / Expense</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cloufi__Number_Of_Customers__c</fullName>
        <label>Number Of Customers</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloufi__Payback_Amount__c</fullName>
        <label>Payback Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cloufi__Payment_Processor__c</fullName>
        <globalPicklist>Cloufi__Payment_Processor</globalPicklist>
        <label>Payment Processor</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cloufi__Percentage_Of_Gross__c</fullName>
        <label>Percentage Of Gross</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cloufi__Real_Estate_Value_finance_info__c</fullName>
        <label>Real Estate Value</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cloufi__Referral_Partner_Account__c</fullName>
        <formula>Cloufi__Referral_Partner__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referral Partner Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloufi__Referral_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referral Partner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Referral Partner)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cloufi__Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Representative</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Loans (Contact)</relationshipLabel>
        <relationshipName>Loans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cloufi__Sales_General_And_Admin_Expenses_Finance__c</fullName>
        <label>Sales, General And Admin Expenses</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cloufi__Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Sales Rep)</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cloufi__Sector__c</fullName>
        <label>Sector</label>
        <picklist>
            <picklistValues>
                <fullName>Accommodation and Food Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative and Support and Waste Management and Re-mediation Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agriculture, Forestry, Fishing and Hunting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arts, Entertainment, and Recreation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Educational Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance and Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Care and Social Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management of Companies and Enterprises</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining, Quarrying, and Oil and Gas Extraction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Services (except Public Administration)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional, Scientific, and Technical Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate and Rental and Leasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation and Warehousing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesale Trade / Distribution</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cloufi__Separate_Payroll_Account__c</fullName>
        <label>Separate Payroll Account</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cloufi__State_Of_Incorporation__c</fullName>
        <label>State Of Incorporation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloufi__Stip_Request__c</fullName>
        <label>Stip Request</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cloufi__Tax_Liens__c</fullName>
        <label>Tax Liens $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cloufi__Taxes__c</fullName>
        <label>Taxes</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cloufi__Terms_Of_Sale__c</fullName>
        <label>Terms Of Sale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloufi__Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloufi__Total_Management_Fee_Collected__c</fullName>
        <label>Total Management Fee Collected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cloufi__Total_Number_Of_Syndicator__c</fullName>
        <label>Total Number Of Syndicator</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cloufi__Total_Payments__c</fullName>
        <label>Total Payments</label>
        <summarizedField>Cloufi__Payment__c.Cloufi__Payment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Cloufi__Payment__c.Cloufi__Status__c</field>
            <operation>equals</operation>
            <value>Settled</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Cloufi__Payment__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Payment In</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Cloufi__Payment__c.Cloufi__Payment_Type__c</field>
            <operation>equals</operation>
            <value>Payment</value>
        </summaryFilterItems>
        <summaryForeignKey>Cloufi__Payment__c.Cloufi__Loan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Cloufi__TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloufi__Type_of_Business__c</fullName>
        <label>Type of Business</label>
        <picklist>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurant/Bar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lodging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home-Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cloufi__Underwriter1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Underwriter</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Underwriter)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cloufi__Underwriter__c</fullName>
        <label>Underwriter</label>
        <picklist>
            <picklistValues>
                <fullName>Marcus Ferrari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daniel Israel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeff Blum</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Cloufi__Upfront_Fees__c</fullName>
        <label>Upfront Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cloufi__Upload_Stips__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upload Stips</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commission_Amount__c</fullName>
        <formula>Amount *  Cloufi__Commission__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commission Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Payable__c</fullName>
        <label>Commission Payable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Received__c</fullName>
        <label>Commission Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Company_Logo__c</fullName>
        <formula>Owner.Company_Logo__c</formula>
        <label>Company Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_Stage_Date_Time__c</fullName>
        <label>Completed Stage Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Completed_Stage_Date__c</fullName>
        <label>Completed Stage Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Name_and_or_Account_No__c</fullName>
        <label>Contact Name and/or Account No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Received_Stage_Date_Time__c</fullName>
        <label>Contract Received Stage Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contract_Received_Stage_Date__c</fullName>
        <label>Contract Received Stage Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Requested_Stage_Date_Time__c</fullName>
        <label>Contract Requested Stage Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contract_Requested_Stage_Date__c</fullName>
        <label>Contract Requested Stage Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Sent_Stage_Date_Time__c</fullName>
        <label>Contract Sent Stage Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contract_Sent_Stage_Date__c</fullName>
        <label>Contract Sent Stage Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Signed_Partial_Stage_Date_Time__c</fullName>
        <label>Contract Signed Partial Stage Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contract_Signed_Partial_Stage_Date__c</fullName>
        <label>Contract Signed Partial Stage Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Corporate_Length_of_Ownership__c</fullName>
        <label>Years of Ownership</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Corporate_credit_info__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owner 2 credit info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <globalPicklist>Business_Countries</globalPicklist>
        <label>Country</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Processing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CC Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Balance__c</fullName>
        <label>Current Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>